[gd_scene load_steps=4 format=3 uid="uid://d2wskd0qoanob"]

[ext_resource type="Texture2D" uid="uid://dl737mowd7vnx" path="res://assets/textures/rocket.png" id="1_d106g"]
[ext_resource type="Script" path="res://scripts/rocket.gd" id="1_ochhh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xcmwp"]
radius = 13.0
height = 66.0

[node name="Rocket" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ochhh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_d106g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xcmwp")

[node name="VisiableNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisiableNotifier" to="." method="_on_visiable_notifier_screen_exited"]
